--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -258,6 +258,158 @@
     "# Note: 'Model' is a high-cardinality feature. We will handle it with one-hot encoding later.\n",
     "# You might need to add `cubiccapacity`, `kilowatts`, and `NumberOfDoors` if you want to use them."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2cf2581",
+   "metadata": {},
+   "source": [
+    "#### Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "43c38cbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created 'VehicleAge' based on RegistrationYear. Max age is 28 years.\n",
+      "Created 'PremiumRate' (CalculatedPremiumPerTerm / SumInsured).\n",
+      "Created 'SumInsuredRatio' (SumInsured / CustomValueEstimate).\n",
+      "Created 'VehicleAgeGroup' by binning VehicleAge.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\girmachew\\AppData\\Local\\Temp\\ipykernel_912\\541521366.py:17: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_fe['PremiumRate'].replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+      "C:\\Users\\girmachew\\AppData\\Local\\Temp\\ipykernel_912\\541521366.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_fe['PremiumRate'].fillna(df_fe['PremiumRate'].median(), inplace=True)\n",
+      "C:\\Users\\girmachew\\AppData\\Local\\Temp\\ipykernel_912\\541521366.py:26: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_fe['SumInsuredRatio'].replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+      "C:\\Users\\girmachew\\AppData\\Local\\Temp\\ipykernel_912\\541521366.py:27: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_fe['SumInsuredRatio'].fillna(df_fe['SumInsuredRatio'].median(), inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created 'Make_VehicleAge' interaction feature.\n",
+      "\n",
+      "Feature Engineering is complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a copy to perform feature engineering without modifying the original DataFrame\n",
+    "df_fe = df.copy()\n",
+    "\n",
+    "# 1. Vehicle Age\n",
+    "# This is a classic risk feature, as older vehicles may have different risk profiles.\n",
+    "# We'll calculate it relative to the latest registration year in the data.\n",
+    "max_reg_year = df_fe['RegistrationYear'].max()\n",
+    "df_fe['VehicleAge'] = max_reg_year - df_fe['RegistrationYear']\n",
+    "print(f\"Created 'VehicleAge' based on RegistrationYear. Max age is {df_fe['VehicleAge'].max()} years.\")\n",
+    "\n",
+    "# 2. Premium Rate (a proxy for risk density)\n",
+    "# This ratio captures the premium paid relative to the sum insured.\n",
+    "# A higher rate might indicate a policy the insurer already considered higher risk.\n",
+    "# Handle division by zero/missing SumInsured to avoid errors\n",
+    "df_fe['PremiumRate'] = df_fe['CalculatedPremiumPerTerm'] / df_fe['SumInsured'].replace(0, np.nan)\n",
+    "# Replace infinite values with NaN and then a sensible number like the median\n",
+    "df_fe['PremiumRate'].replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "df_fe['PremiumRate'].fillna(df_fe['PremiumRate'].median(), inplace=True)\n",
+    "print(\"Created 'PremiumRate' (CalculatedPremiumPerTerm / SumInsured).\")\n",
+    "\n",
+    "# 3. Under/Over-Insurance Ratio\n",
+    "# This compares the policy's sum insured to the vehicle's estimated value,\n",
+    "# which could be a proxy for customer behavior or risk.\n",
+    "# Handle division by zero/missing CustomValueEstimate\n",
+    "df_fe['SumInsuredRatio'] = df_fe['SumInsured'] / df_fe['CustomValueEstimate'].replace(0, np.nan)\n",
+    "df_fe['SumInsuredRatio'].replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "df_fe['SumInsuredRatio'].fillna(df_fe['SumInsuredRatio'].median(), inplace=True)\n",
+    "print(\"Created 'SumInsuredRatio' (SumInsured / CustomValueEstimate).\")\n",
+    "\n",
+    "# 4. Binning a numerical feature (e.g., VehicleAge)\n",
+    "# This converts a continuous variable into categorical bins, which can help models\n",
+    "# capture non-linear relationships without needing a complex model.\n",
+    "df_fe['VehicleAgeGroup'] = pd.cut(\n",
+    "    df_fe['VehicleAge'],\n",
+    "    bins=[0, 5, 10, 15, 20, np.inf],\n",
+    "    labels=['0-5 Years', '6-10 Years', '11-15 Years', '16-20 Years', '20+ Years'],\n",
+    "    right=False\n",
+    ")\n",
+    "print(\"Created 'VehicleAgeGroup' by binning VehicleAge.\")\n",
+    "\n",
+    "# 5. Interaction Feature (example)\n",
+    "# This can capture that a combination of factors might be a better predictor than\n",
+    "# each factor alone (e.g., older vehicles of a specific make).\n",
+    "df_fe['Make_VehicleAge'] = df_fe['make'].astype(str) + '_' + df_fe['VehicleAgeGroup'].astype(str)\n",
+    "print(\"Created 'Make_VehicleAge' interaction feature.\")\n",
+    "\n",
+    "print(\"\\nFeature Engineering is complete.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a0916d5",
+   "metadata": {},
+   "source": [
+    "#### Update Modeling Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "28d73c69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update the list of features for your modeling pipeline\n",
+    "modeling_features_updated = [\n",
+    "    # Original Features\n",
+    "    'Province', 'Gender', 'make', 'Model', 'body_type', 'Cylinders', 'RegistrationYear',\n",
+    "    'CustomValueEstimate', 'CapitalOutstanding', 'SumInsured', 'CalculatedPremiumPerTerm',\n",
+    "    'NumberOfDoors', 'AlarmImmobiliser', 'TrackingDevice', 'CoverType',\n",
+    "    \n",
+    "    # Engineered Features\n",
+    "    'VehicleAge',           # Numerical\n",
+    "    'PremiumRate',          # Numerical\n",
+    "    'SumInsuredRatio',      # Numerical\n",
+    "    'VehicleAgeGroup',      # Categorical\n",
+    "    'Make_VehicleAge'       # Categorical (Interaction)\n",
+    "]\n",
+    "\n",
+    "# Note: You will need to re-run the missing data handling and encoding steps on `df_fe`\n",
+    "# with this updated list of features."
+   ]
   }
  ],
  "metadata": {
